set up left side in html/css and add font and logo to extras folder

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 <body>
-  
+  <div class="left-side">
+    <div class="logo-banner">ODIN<img src="/extras/odin-lined.png" alt="odin logo" class="logo"></div>
+  </div>
+  <div class="right-side">
+    <p class="intro"></p>
+  </div>
 </body>
 </html>
