add footer with links for photo credit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   </head>
 <body>
   <div class="left-side">
-    <div class="logo-banner">ODIN<img src="/extras/odin-lined.png" alt="odin logo" class="logo"></div>
+    <div class="logo-banner">ODIN
+      <img src="/extras/odin-lined.png" alt="odin logo" class="logo">
+    </div>
+    <div class="left-side-footer">
+      Photo by <a href="https://unsplash.com/@haliewestphoto" class="footer-link">Halie West</a> on
+      <a href="https://unsplash.com/" class="footer-link">Unsplash</a>
+    </div>
   </div>
   <div class="right-side">
     <p class="intro"></p>
