--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="left-side">
     <div class="logo-banner">ODIN
-      <img src="/extras/odin-lined.png" alt="odin logo" class="logo">
+      <img src="./extras/odin-lined.png" alt="odin logo" class="logo">
     </div>
     <div class="left-side-footer">
       Photo by <a href="https://unsplash.com/@haliewestphoto" class="footer-link">Halie West</a> on
