add filler to right side and change to flex column

--- a/index.html
+++ b/index.html
@@ -17,7 +17,50 @@
     </div>
   </div>
   <div class="right-side">
-    <p class="intro"></p>
+    <form action="" method="post">
+      <div class="form-container">
+        <div class="intro">This is not a real online service! You know you need something<br>
+          like this in your life to help you realize your deepest dreams. <br>Sign up now to get started.
+          <br><br>You know you want to.
+        </div>
+        <div class="form-controls-container">
+          <h2 class="">Let's do This!</h2>
+          <div class="form-row-1">
+            <p>
+              <label for="first-name">First Name</label>
+              <input id="first-name" name="first-name">
+            </p>
+            <p>
+              <label for="last-name">Last Name</label>
+              <input id="last-name" name="last-name">
+            </p>
+          </div>
+          <div class="form-row-2">
+            <p>
+              <label for="first-name">First Name</label>
+              <input id="first-name" name="first-name">
+            </p>
+            <p>
+              <label for="last-name">Last Name</label>
+              <input id="last-name" name="last-name">
+            </p>
+          </div>
+          <div class="form-row-3">
+            <p>
+              <label for="first-name">First Name</label>
+              <input id="first-name" name="first-name">
+            </p>
+            <p>
+              <label for="last-name">Last Name</label>
+              <input id="last-name" name="last-name">
+            </p>
+          </div>
+        </div>
+        <div class="button-container">
+          <button type="submit">Submit</button>
+        </div>
+      </div>
+    </form>
   </div>
 </body>
 </html>
