--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
   <div class="right-side">
     <form action="" method="post">
       <div class="form-container">
-        <div class="intro">This is not a real online service! You know you need something<br>
-          like this in your life to help you realize your deepest dreams. <br>Sign up now to get started.
-          <br><br>You know you want to.
+        <div class="intro-block">
+          <p class="intro-text">
+            This is not a real online service! You know you need something<br>
+            like this in your life to help you realize your deepest dreams. <br>Sign up now to get started.
+            <br><br>You know you want to.
+          </p>
         </div>
         <div class="form-controls-container">
           <h2 class="">Let's do This!</h2>
-          <div class="form-row-1">
+          <div class="form-row-1 row">
             <p>
               <label for="first-name">First Name</label>
               <input id="first-name" name="first-name">
@@ -35,7 +38,7 @@
               <input id="last-name" name="last-name">
             </p>
           </div>
-          <div class="form-row-2">
+          <div class="form-row-2 row">
             <p>
               <label for="first-name">First Name</label>
               <input id="first-name" name="first-name">
@@ -45,7 +48,7 @@
               <input id="last-name" name="last-name">
             </p>
           </div>
-          <div class="form-row-3">
+          <div class="form-row-3 row">
             <p>
               <label for="first-name">First Name</label>
               <input id="first-name" name="first-name">
@@ -57,7 +60,8 @@
           </div>
         </div>
         <div class="button-container">
-          <button type="submit">Submit</button>
+          <button type="submit">Create Account</button>
+          <p class="button-text">Already have an account? <a href="" class="button-link">Log in</a></p>
         </div>
       </div>
     </form>
