--- a/index.html
+++ b/index.html
@@ -31,31 +31,31 @@
           <div class="form-row-1 row">
             <p>
               <label for="first-name">First Name</label>
-              <input id="first-name" name="first-name">
+              <input type="text" id="first-name" name="first-name">
             </p>
             <p>
               <label for="last-name">Last Name</label>
-              <input id="last-name" name="last-name">
+              <input type="text" id="last-name" name="last-name">
             </p>
           </div>
           <div class="form-row-2 row">
             <p>
-              <label for="first-name">First Name</label>
-              <input id="first-name" name="first-name">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email">
             </p>
             <p>
-              <label for="last-name">Last Name</label>
-              <input id="last-name" name="last-name">
+              <label for="phone">Phone Number</label>
+              <input type="tel" id="phone" name="phone">
             </p>
           </div>
           <div class="form-row-3 row">
             <p>
-              <label for="first-name">First Name</label>
-              <input id="first-name" name="first-name">
+              <label for="password">Password</label>
+              <input id="password" name="password">
             </p>
             <p>
-              <label for="last-name">Last Name</label>
-              <input id="last-name" name="last-name">
+              <label for="password-2">Confirm Password</label>
+              <input id="password-2" name="password-2">
             </p>
           </div>
         </div>
