finish touching up html and css to style page correctly

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
           <div class="form-row-3 row">
             <p>
               <label for="password">Password</label>
-              <input id="password" name="password">
+              <input type="password" id="password" name="password" required>
             </p>
             <p>
               <label for="password-2">Confirm Password</label>
-              <input id="password-2" name="password-2">
+              <input type="password" id="password-2" name="password-2" required>
             </p>
           </div>
         </div>
