--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="password.js" defer></script>
   </head>
 <body>
   <div class="left-side">
@@ -18,51 +19,49 @@
   </div>
   <div class="right-side">
     <form action="" method="post">
-      <div class="form-container">
-        <div class="intro-block">
-          <p class="intro-text">
-            This is not a real online service! You know you need something<br>
-            like this in your life to help you realize your deepest dreams. <br>Sign up now to get started.
-            <br><br>You know you want to.
+      <div class="intro-block">
+        <p class="intro-text">
+          This is not a real online service! You know you need something<br>
+          like this in your life to help you realize your deepest dreams. <br>Sign up now to get started.
+          <br><br>You know you want to.
+        </p>
+      </div>
+      <div class="form-controls-container">
+        <h2 class="">Let's do This!</h2>
+        <div class="form-row-1 row">
+          <p>
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" name="first-name">
+          </p>
+          <p>
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" name="last-name">
           </p>
         </div>
-        <div class="form-controls-container">
-          <h2 class="">Let's do This!</h2>
-          <div class="form-row-1 row">
-            <p>
-              <label for="first-name">First Name</label>
-              <input type="text" id="first-name" name="first-name">
-            </p>
-            <p>
-              <label for="last-name">Last Name</label>
-              <input type="text" id="last-name" name="last-name">
-            </p>
-          </div>
-          <div class="form-row-2 row">
-            <p>
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email">
-            </p>
-            <p>
-              <label for="phone">Phone Number</label>
-              <input type="tel" id="phone" name="phone">
-            </p>
-          </div>
-          <div class="form-row-3 row">
-            <p>
-              <label for="password">Password</label>
-              <input type="password" id="password" name="password" required>
-            </p>
-            <p>
-              <label for="password-2">Confirm Password</label>
-              <input type="password" id="password-2" name="password-2" required>
-            </p>
-          </div>
+        <div class="form-row-2 row">
+          <p>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email">
+          </p>
+          <p>
+            <label for="phone">Phone Number</label>
+            <input type="tel" id="phone" name="phone">
+          </p>
         </div>
-        <div class="button-container">
-          <button type="submit">Create Account</button>
-          <p class="button-text">Already have an account? <a href="" class="button-link">Log in</a></p>
+        <div class="form-row-3 row">
+          <p>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password">
+          </p>
+          <p>
+            <label for="password-2">Confirm Password</label>
+            <input type="password" id="password-2" name="password-2">
+          </p>
         </div>
+      </div>
+      <div class="button-container">
+        <button type="submit">Create Account</button>
+        <p class="button-text">Already have an account? <a href="" class="button-link">Log in</a></p>
       </div>
     </form>
   </div>
