--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         <div class="form-row-1 row">
           <p>
             <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="first-name">
+            <input type="text" id="first-name" name="first-name" required>
           </p>
           <p>
             <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="last-name">
+            <input type="text" id="last-name" name="last-name" required>
           </p>
         </div>
         <div class="form-row-2 row">
           <p>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email">
+            <input type="email" id="email" name="email" required>
           </p>
           <p>
             <label for="phone">Phone Number</label>
@@ -51,13 +51,14 @@
         <div class="form-row-3 row">
           <p>
             <label for="password">Password</label>
-            <input type="password" id="password" name="password">
+            <input type="password" id="password" name="password" required>
           </p>
           <p>
             <label for="password-2">Confirm Password</label>
-            <input type="password" id="password-2" name="password-2">
+            <input type="password" id="password-2" name="password-2" required>
           </p>
         </div>
+        <p id="errorMessage">*Passwords must match*</p>
       </div>
       <div class="button-container">
         <button type="submit">Create Account</button>
